--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,487</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,558</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.ToolsQa.Qa.Tests.ToolsQAElementPageTest</td><td><a href="#m0">ElementClickTest</a></td><td rowspan="1">1654393476013</td><td rowspan="1">1497</td></tr><tr class="passedeven"><td><a href="#m1">ElementTextBoxTest</a></td><td rowspan="1">1654393477637</td><td rowspan="1">594</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.ToolsQa.Qa.Tests.ToolsQAElementPageTest</td><td><a href="#m0">ElementClickTest</a></td><td rowspan="1">1655267451174</td><td rowspan="1">1251</td></tr><tr class="passedeven"><td><a href="#m1">ElementRadioButtonClickTest</a></td><td rowspan="1">1655267452444</td><td rowspan="1">2176</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">com.ToolsQa.Qa.Tests.ToolsQAElementPageTest#ElementClickTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.ToolsQa.Qa.Tests.ToolsQAElementPageTest#ElementTextBoxTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.ToolsQa.Qa.Tests.ToolsQAElementPageTest#ElementRadioButtonClickTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
