--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\skuma\AppData\Local\Temp\testng-eclipse--279007218\testng-customsuite.xml</span>
+                    <span>C:\Users\skuma\AppData\Local\Temp\testng-eclipse-1116220919\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -109,7 +109,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.ToolsQa.Qa.Tests.ToolsQAElementPageTest" class="method navigator-link" hash-for-method="ElementTextBoxTest">ElementTextBoxTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.ToolsQa.Qa.Tests.ToolsQAElementPageTest" class="method navigator-link" hash-for-method="ElementRadioButtonClickTest">ElementRadioButtonClickTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -139,9 +139,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ElementTextBoxTest">
-                  </a> <!-- ElementTextBoxTest -->
-                  <span class="method-name">ElementTextBoxTest</span>
+                  <a name="ElementRadioButtonClickTest">
+                  </a> <!-- ElementRadioButtonClickTest -->
+                  <span class="method-name">ElementRadioButtonClickTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\skuma\AppData\Local\Temp\testng-eclipse--279007218\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\skuma\AppData\Local\Temp\testng-eclipse-1116220919\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -200,18 +200,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ElementClickTest')
+data.setCell(0, 1, 'ElementRadioButtonClickTest')
 data.setCell(0, 2, 'com.ToolsQa.Qa.Tests.ToolsQAElementPageTest')
-data.setCell(0, 3, 1497);
+data.setCell(0, 3, 2176);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ElementTextBoxTest')
+data.setCell(1, 1, 'ElementClickTest')
 data.setCell(1, 2, 'com.ToolsQa.Qa.Tests.ToolsQAElementPageTest')
-data.setCell(1, 3, 594);
+data.setCell(1, 3, 1251);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -226,9 +226,20 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.ToolsQa.Qa.Tests.ToolsQAElementPageTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">ElementCheckBoxHomeClickTest</span>
+                <br/>
+                <span class="ignored-method-name">ElementCheckBoxTest</span>
+                <br/>
+                <span class="ignored-method-name">ElementTextBoxTest</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -244,24 +255,24 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">ElementClickTest</span>
-                <span class="method-start">5022 ms</span>
+                <span class="method-start">4701 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">EndOfMethod</span>
-                <span class="method-start">6630 ms</span>
+                <span class="method-start">5958 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">ElementTextBoxTest</span>
-                <span class="method-start">6646 ms</span>
+                <span class="method-name">ElementRadioButtonClickTest</span>
+                <span class="method-start">5971 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">EndOfMethod</span>
-                <span class="method-start">7254 ms</span>
-              </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">closing</span>
-                <span class="method-start">7255 ms</span>
+                <span class="method-start">8147 ms</span>
               </div> <!-- configuration-test after -->
+              <div class="configuration-method after">
+                <span class="method-name">EndOfMethod</span>
+                <span class="method-start">8147 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
