--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.ToolsQa.Qa.Tests.ToolsQAElementPageTest.ElementCheckBoxHomeClickTest</td></tr>
+<tr><td>com.ToolsQa.Qa.Tests.ToolsQAElementPageTest.ElementCheckBoxTest</td></tr>
+<tr><td>com.ToolsQa.Qa.Tests.ToolsQAElementPageTest.ElementTextBoxTest</td></tr>
 </table>
