--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="86b28d">  <td>22/06/04 21:44:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToolsQAElementPageTest.ElementTextBoxTest()[pri:2, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@6050462a]">ElementTextBoxTest</td> 
-  <td>main@45666436</td>   <td></td> </tr>
-<tr bgcolor="86b28d">  <td>22/06/04 21:44:38</td>   <td>608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ToolsQAElementPageTest.EndOfMethod()[pri:0, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@6050462a]">&lt;&lt;EndOfMethod</td> 
-<td>&nbsp;</td>  <td>main@45666436</td>   <td></td> </tr>
-<tr bgcolor="86b28d">  <td>22/06/04 21:44:36</td>   <td>-1624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToolsQAElementPageTest.ElementClickTest()[pri:1, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@6050462a]">ElementClickTest</td> 
-  <td>main@45666436</td>   <td></td> </tr>
-<tr bgcolor="86b28d">  <td>22/06/04 21:44:30</td>   <td>-6639</td> <td>&nbsp;</td><td title="&gt;&gt;ToolsQAElementPageTest.SetUp()[pri:0, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@6050462a]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@45666436</td>   <td></td> </tr>
-<tr bgcolor="86b28d">  <td>22/06/04 21:44:38</td>   <td>608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ToolsQAElementPageTest.EndOfMethod()[pri:0, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@6050462a]">&lt;&lt;EndOfMethod</td> 
-<td>&nbsp;</td>  <td>main@45666436</td>   <td></td> </tr>
-<tr bgcolor="86b28d">  <td>22/06/04 21:44:38</td>   <td>609</td> <td>&nbsp;</td><td title="&lt;&lt;ToolsQAElementPageTest.closing()[pri:0, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@6050462a]">&lt;&lt;closing</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@45666436</td>   <td></td> </tr>
+<tr bgcolor="86b28d">  <td>22/06/15 00:30:46</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ToolsQAElementPageTest.SetUp()[pri:0, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@11841b15]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@160696258</td>   <td></td> </tr>
+<tr bgcolor="86b28d">  <td>22/06/15 00:30:51</td>   <td>4695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToolsQAElementPageTest.ElementClickTest()[pri:1, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@11841b15]">ElementClickTest</td> 
+  <td>main@160696258</td>   <td></td> </tr>
+<tr bgcolor="86b28d">  <td>22/06/15 00:30:54</td>   <td>8141</td> <td>&nbsp;</td><td title="&lt;&lt;ToolsQAElementPageTest.closing()[pri:0, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@11841b15]">&lt;&lt;closing</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@160696258</td>   <td></td> </tr>
+<tr bgcolor="86b28d">  <td>22/06/15 00:30:54</td>   <td>8141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ToolsQAElementPageTest.EndOfMethod()[pri:0, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@11841b15]">&lt;&lt;EndOfMethod</td> 
+<td>&nbsp;</td>  <td>main@160696258</td>   <td></td> </tr>
+<tr bgcolor="86b28d">  <td>22/06/15 00:30:54</td>   <td>8141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ToolsQAElementPageTest.EndOfMethod()[pri:0, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@11841b15]">&lt;&lt;EndOfMethod</td> 
+<td>&nbsp;</td>  <td>main@160696258</td>   <td></td> </tr>
+<tr bgcolor="86b28d">  <td>22/06/15 00:30:52</td>   <td>5965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToolsQAElementPageTest.ElementRadioButtonClickTest()[pri:2, instance:com.ToolsQa.Qa.Tests.ToolsQAElementPageTest@11841b15]">ElementRadioButtonClickTest</td> 
+  <td>main@160696258</td>   <td></td> </tr>
 </table>
